python/tests/gold/gzipnotsupportedcontenttypetest/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v0\nkind: Module\nname: ambassador\nconfig:\n  gzip:\n    min_content_length: 32\n    content_type:\n    - application/json\nambassador_id: gzipnotsupportedcontenttypetest\n\n---\napiVersion: ambassador/v0\nkind: Mapping\nname: gzipnotsupportedcontenttypetest-http\nprefix: /target/\nservice: gzipnotsupportedcontenttypetest-http\nambassador_id: gzipnotsupportedcontenttypetest\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v0\\nkind: Module\\nname: ambassador\\nconfig:\\n  gzip:\\n    min_content_length: 32\\n    content_type:\\n    - application/json\\nambassador_id: gzipnotsupportedcontenttypetest\\n\\n---\\napiVersion: ambassador/v0\\nkind: Mapping\\nname: gzipnotsupportedcontenttypetest-http\\nprefix: / [...]
                    },
                    "creationTimestamp": "2020-01-09T12:55:00Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "gzipnotsupportedcontenttypetest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "gzipnotsupportedcontenttypetest",
                    "namespace": "default",
                    "resourceVersion": "14167",
                    "selfLink": "/api/v1/namespaces/default/services/gzipnotsupportedcontenttypetest",
                    "uid": "3edede7a-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.101.117.49",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 31039,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 30514,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "gzipnotsupportedcontenttypetest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"gzipnotsupportedcontenttypetest\",\"scope\":\"AmbassadorTest\",\"service\":\"gzipnotsupportedcontenttypetest-admin\"},\"name\":\"gzipnotsupportedcontenttypetest-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"gzipnotsupportedcontenttypetest-admin\",\"port\":8877,\"targetPort\":8877}],\"sel [...]
                    },
                    "creationTimestamp": "2020-01-09T12:55:00Z",
                    "labels": {
                        "kat-ambassador-id": "gzipnotsupportedcontenttypetest",
                        "scope": "AmbassadorTest",
                        "service": "gzipnotsupportedcontenttypetest-admin"
                    },
                    "name": "gzipnotsupportedcontenttypetest-admin",
                    "namespace": "default",
                    "resourceVersion": "14171",
                    "selfLink": "/api/v1/namespaces/default/services/gzipnotsupportedcontenttypetest-admin",
                    "uid": "3eef0918-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.105.136.5",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "gzipnotsupportedcontenttypetest-admin",
                            "nodePort": 30350,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "gzipnotsupportedcontenttypetest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"gzipnotsupportedcontenttypetest\",\"scope\":\"AmbassadorTest\"},\"name\":\"gzipnotsupportedcontenttypetest-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8097},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8460}] [...]
                    },
                    "creationTimestamp": "2020-01-09T12:55:00Z",
                    "labels": {
                        "kat-ambassador-id": "gzipnotsupportedcontenttypetest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "gzipnotsupportedcontenttypetest-http",
                    "namespace": "default",
                    "resourceVersion": "14178",
                    "selfLink": "/api/v1/namespaces/default/services/gzipnotsupportedcontenttypetest-http",
                    "uid": "3f0336ec-32df-11ea-906a-16ae7cdef087"
                },
                "spec": {
                    "clusterIP": "10.109.61.26",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8097
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8460
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
